tests/ui/traits/next-solver/dont-ice-on-bogus-sized-impl-in-const-block.stderr
error[E0322]: explicit impls for the `Sized` trait are not permitted
  --> $DIR/dont-ice-on-bogus-sized-impl-in-const-block.rs:11:1
   |
LL | impl<'a, T: ?Sized> Sized for T {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ impl of `Sized` not allowed

error[E0210]: type parameter `T` must be used as the type parameter for some local type (e.g., `MyStruct<T>`)
  --> $DIR/dont-ice-on-bogus-sized-impl-in-const-block.rs:11:10
   |
LL | impl<'a, T: ?Sized> Sized for T {}
   |          ^ type parameter `T` must be used as the type parameter for some local type
   |
   = note: implementing a foreign trait is only possible if at least one of the types for which it is implemented is local
   = note: only traits defined in the current crate can be implemented for a type parameter

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0210, E0322.
For more information about an error, try `rustc --explain E0210`.
